Fix styles on ios devices

--- a/src/Survey/Moth/Location/Components/BottomSheetPointEntry/styles.scss
+++ b/src/Survey/Moth/Location/Components/BottomSheetPointEntry/styles.scss
@@ -53,7 +53,7 @@
         flex: 1;
         display: flex;
         justify-content: center;
-        align-items: end;
+        align-items: flex-end;
         flex-direction: column;
 
         ion-icon {
